--- a/landing/templates/conference/guidelinetype/listado.html
+++ b/landing/templates/conference/guidelinetype/listado.html
@@ -137,7 +137,7 @@
                         }
                     }).done(function (data) {
                         setTimeout($.unblockUI, 1);
-                        if (data.error === false) {
+                        if (data[0].error === false) {
                             location.reload();
                         }
                     }).fail(function (jqXHR, textStatus, errorThrown) {
