--- a/landing/templates/conference/summary/listado_image.html
+++ b/landing/templates/conference/summary/listado_image.html
@@ -1,4 +1,6 @@
 {% extends 'base.html' %}
+
+{% block atras %}/landing/summary/{% endblock %}
 {% block content %}
     <form method="GET">
         <div class="container-fluid px-0">
@@ -24,10 +26,14 @@
 
 
     <div class="mb-3">
-        <a href="?action=add&{{ dict_url_vars }}" class="btn btn-success"><i class="fas fa-plus-circle mr-2"></i>
-            Nueva Categoría de comite</a>
+        <a href="?action=add&summary_id={{ summary.pk }}" class="btn btn-success"><i
+                class="fas fa-plus-circle mr-2"></i>
+            Nueva Imagen del resumen</a>
     </div>
 
+    <div class="mb-3">
+        <h3>Titulo: {{ summary.title }}</h3>
+    </div>
 
     <div class="panel panel-default">
         <div class="panel-body">
@@ -36,19 +42,10 @@
                     <thead class="thead-dark">
                     <tr>
                         <th class="text-center">
-                            Categoría
-                        </th>
-                        <th class="text-center">
                             Nombre
                         </th>
                         <th class="text-center">
-                            Foto
-                        </th>
-                        <th class="text-center">
-                            Grado
-                        </th>
-                        <th class="text-center">
-                            Redes sociales
+                            Imagen
                         </th>
                         <th class="text-center">
                             Público
@@ -62,62 +59,19 @@
                     {% for l in listado %}
                         <tr>
                             <td style="text-align: center">
-                                {{ l.category }}
-                            </td>
-                            <td style="text-align: center">
                                 {{ l.name }}
                             </td>
                             <td style="text-align: center">
-                                {{ l.degree }}
-                            </td>
-                            <td style="text-align: center">
-                                {% if l.photo == '' %}
+                                {% if l.image == '' %}
                                     S/A
                                 {% else %}
-                                    <a href="{{ l.photo.url }}" data-lightbox="roadtrip"
+                                    <a href="{{ l.image.url }}" data-lightbox="roadtrip"
                                        title="{{ l.name }}">
-                                        <img id="presentaimg2" src="{{ l.photo.url }}"
+                                        <img id="presentaimg2" src="{{ l.image.url }}"
                                              class="img-thumbnail"
                                              width="50px" align="middle"
                                              alt="...">
                                     </a>
-                                {% endif %}
-                            </td>
-                            <td style="text-align: center">
-                                {% if l.linkedin %}
-                                    <a href="{{ l.linkedin }}"
-                                       target="_blank">
-                                        <i class="fa fa-linkedin-square" aria-hidden="true"></i>
-                                    </a>
-                                    <br>
-                                {% endif %}
-                                {% if l.facebook %}
-                                    <a href="{{ l.facebook }}"
-                                       target="_blank">
-                                        <i class="fa fa-facebook-square" aria-hidden="true"></i>
-                                    </a>
-                                    <br>
-                                {% endif %}
-                                {% if l.instagram %}
-                                    <a href="{{ l.instagram }}"
-                                       target="_blank">
-                                        <i class="fa fa-instagram" aria-hidden="true"></i>
-                                    </a>
-                                    <br>
-                                {% endif %}
-                                {% if l.x %}
-                                    <a href="{{ l.x }}"
-                                       target="_blank">
-                                        <i class="fa fa-twitter-square" aria-hidden="true"></i>
-                                    </a>
-                                    <br>
-                                {% endif %}
-                                {% if l.youtube %}
-                                    <a href="{{ l.youtube }}"
-                                       target="_blank">
-                                        <i class="fa fa-youtube-square" aria-hidden="true"></i>
-                                    </a>
-                                    <br>
                                 {% endif %}
                             </td>
                             <td style="text-align: center">
