--- a/landing/templates/conference/importantdate/listado.html
+++ b/landing/templates/conference/importantdate/listado.html
@@ -36,10 +36,13 @@
                     <thead class="thead-dark">
                     <tr>
                         <th class="text-center">
-                            Sponsor
+                            Titulo
                         </th>
                         <th class="text-center">
-                            Imagen
+                            Fecha
+                        </th>
+                        <th class="text-center">
+                            Publico
                         </th>
                         <th class="text-center">
                             Acción
@@ -50,19 +53,16 @@
                     {% for l in listado %}
                         <tr>
                             <td style="text-align: center">
-                                {{ l.name }}
+                                {{ l.title }}
                             </td>
                             <td style="text-align: center">
-                                {% if l.image == '' %}
-                                    S/A
+                                {{ l.get_formatted_date_range }}
+                            </td>
+                            <td style="text-align: center">
+                                {% if l.public %}
+                                    SI
                                 {% else %}
-                                    <a href="{{ l.image.url }}" data-lightbox="roadtrip"
-                                       title="{{ l.name }}">
-                                        <img id="presentaimg2" src="{{ l.image.url }}"
-                                             class="img-thumbnail"
-                                             width="50px" align="middle"
-                                             alt="...">
-                                    </a>
+                                    NO
                                 {% endif %}
                             </td>
                             <td class="with-btn-group text-center" nowrap>
@@ -143,7 +143,7 @@
                         }
                     }).done(function (data) {
                         setTimeout($.unblockUI, 1);
-                        if (data.error === false) {
+                        if (data[0].error === false) {
                             location.reload();
                         }
                     }).fail(function (jqXHR, textStatus, errorThrown) {
