--- a/landing/templates/conference/sponsor/listado.html
+++ b/landing/templates/conference/sponsor/listado.html
@@ -36,6 +36,9 @@
                     <thead class="thead-dark">
                     <tr>
                         <th class="text-center">
+                            Categoría
+                        </th>
+                        <th class="text-center">
                             Sponsor
                         </th>
                         <th class="text-center">
@@ -52,6 +55,9 @@
                     <tbody>
                     {% for l in listado %}
                         <tr>
+                        <td style="text-align: center">
+                                {{ l.category }}
+                            </td>
                             <td style="text-align: center">
                                 {{ l.name }}
                             </td>
@@ -153,7 +159,7 @@
                         }
                     }).done(function (data) {
                         setTimeout($.unblockUI, 1);
-                        if (data.error === false) {
+                        if (data[0].error === false) {
                             location.reload();
                         }
                     }).fail(function (jqXHR, textStatus, errorThrown) {
