--- a/landing/templates/conference/summary/form.html
+++ b/landing/templates/conference/summary/form.html
@@ -1,5 +1,8 @@
 {% extends 'base.html' %}
-{% block atras %}{{ request.path }}{% endblock %}
+{% block atras %}{{ request.path }}{% if summary %}?summary_id={{ summary.pk }}{% endif %}{% endblock %}
+{% block action %}
+
+{% endblock %}
 {% block content %}
 
     <div class="panel panel-default" data-sortable-id="form-stuff-2">
@@ -59,6 +62,31 @@
                 },
                 imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
             });
+            var file_example = $('#id_file_example').dropify({
+                messages: {
+                    default: 'Arrastre y suelte un archivo o haga clic aquí.',
+                    replace: 'Arrastre y suelte un archivo o haga clic aquí.',
+                    remove: 'Eliminar',
+                },
+                imgFileExtensions: ["jpg", "jpeg", "png", "tiff", "jfif", "svg"]
+            });
+            $("id_summary").select2("disabled", true);
         });
     </script>
+    <style>
+        #id_summary[readonly].select2 + .select2-container {
+            pointer-events: none;
+            touch-action: none;
+
+            .select2-selection {
+                background: #eee;
+                box-shadow: none;
+            }
+
+            .select2-selection__arrow,
+            .select2-selection__clear {
+                display: none;
+            }
+        }
+    </style>
 {% endblock %}
