--- a/landing/templates/conference/summary/listado.html
+++ b/landing/templates/conference/summary/listado.html
@@ -99,6 +99,11 @@
                                             <i class="fas fa-trash"></i> Eliminar
                                         </a>
 
+                                        <a class="dropdown-item" title="Editar {{ modulo }}"
+                                           href="{{ ruta }}images/?summary_id={{ l.pk }}">
+                                            <i class="fas fa-list"></i> Ver imagenes del resumen
+                                        </a>
+
                                     </div>
                                 </div>
                             </td>
@@ -153,7 +158,7 @@
                         }
                     }).done(function (data) {
                         setTimeout($.unblockUI, 1);
-                        if (data.error === false) {
+                        if (data[0].error === false) {
                             location.reload();
                         }
                     }).fail(function (jqXHR, textStatus, errorThrown) {
