--- a/templates/email/recuperar.html
+++ b/templates/email/recuperar.html
@@ -1,15 +1,13 @@
-{% extends 'email/emailbase.html' %}
-
-{% block titulo %}{{ sucursal }}{% endblock %}
+{% extends 'email/base_ictiair.html' %}
 {% block content %}
     <div style="color:#555555; line-height:120%; font-family:Arial,'Helvetica Neue',Helvetica,sans-serif; padding-right:10px; padding-left:10px; padding-top:10px; padding-bottom:10px">
         <div style="font-size:12px; line-height:14px; color:#555555; font-family:Arial,'Helvetica Neue',Helvetica,sans-serif; text-align:left">
 
             <p style="margin:0; font-size:14px; line-height:17px">
-                Tu nueva contraseña: <b>{{ codigo }}</b></p>
+                Your new password: <b>{{ codigo }}</b></p>
 
             <p style="margin:0; font-size:14px; line-height:17px">
-                Fecha: {{ fecha }}
+                Date: {{ fecha }}
             </p>
 
 
