--- a/templates/email/restaurar.html
+++ b/templates/email/restaurar.html
@@ -1,13 +1,12 @@
-{% extends 'email/emailbase.html' %}
+{% extends 'email/base_ictiair.html' %}
 
-{% block titulo %}{{ sucursal }}{% endblock %}
 {% block content %}
     <div style="font-size:12px; line-height:14px; color:#555555; font-family:Arial,'Helvetica Neue',Helvetica,sans-serif; text-align:left">
         <p style="margin:0; font-size:14px; line-height:17px">
-            Nombre de Usuario: <b>{{ usuario.username }}</b>
+            Username: <b>{{ usuario.username }}</b>
         </p>
         <p style="margin:0; font-size:14px; line-height:17px">
-            Fecha: {{ fecha }}
+            Date: {{ fecha }}
         </p>
         <p style="margin:0; font-size:14px; line-height:17px">
             <br>
