--- a/templates/public/base.html
+++ b/templates/public/base.html
@@ -26,7 +26,7 @@
     <link href="/static/exhibiz/css/plugins.css" rel="stylesheet" type="text/css">
     <link href="/static/exhibiz/css/style.css" rel="stylesheet" type="text/css">
     <link href="/static/exhibiz/css/rev-settings.css" rel="stylesheet" type="text/css">
-    <link href="/static/exhibiz/css/color.css" rel="stylesheet" type="text/css">
+    <link href="/static/exhibiz/css/color.css?1" rel="stylesheet" type="text/css">
 
     <!-- color scheme -->
     <link rel="stylesheet" href="/static/exhibiz/css/colors/magenta.css" type="text/css" id="colors">
