feat: se agregar EasyChair, y actualiza template de landing dinamico

--- a/templates/public/landing/landing.html
+++ b/templates/public/landing/landing.html
@@ -329,7 +329,7 @@
                                     <img src="/static/images/icons/pdf.png" class="file-icon" alt="PDF Icon">
                                     <span>Call for Papers (PDF)</span>
                                 </div>
-                                <a href="https://ictiair.tiacon.org/_files/ugd/1ffe67_436b7f6e802d4ef9bda9762a6e2e39f1.pdf?index=true"
+                                <a href="static/callforpapers/CALL FOR PAPER ICTIAIR.pdf"
                                    class="btn btn-primary btn-lg" target="_blank">
                                     <i class="fa fa-download"></i> Download
                                 </a>
@@ -339,7 +339,7 @@
                                     <img src="/static/images/icons/doc.png" class="file-icon" alt="Word Icon">
                                     <span>Word Template (DOCX)</span>
                                 </div>
-                                <a href="https://ictiair.tiacon.org/_files/ugd/1ffe67_8ef967ab10714f8aaa9f5b9f4a64bb5f.docx?dn=ICTIAIR%20-%20Full%20Paper%20Template.docx"
+                                <a href="static/callforpapers/ICTIAIR - Full Paper Template.docx"
                                    class="btn btn-primary btn-lg" target="_blank">
                                     <i class="fa fa-download"></i> Download
                                 </a>
@@ -349,11 +349,21 @@
                                     <img src="/static/images/icons/latex.png" class="file-icon" alt="LaTeX Icon">
                                     <span>LaTeX Template (ZIP)</span>
                                 </div>
-                                <a href="https://ictiair.tiacon.org/_files/archives/1ffe67_0bfb1bbae033431dae2909119d0bed0b.zip?dn=IET%20LaTeX%20Template.zip"
+                                <a href="static/callforpapers/IETLaTeXTemplate.zip"
                                    class="btn btn-primary btn-lg" target="_blank">
                                     <i class="fa fa-download"></i> Download
                                 </a>
                             </li>
+                             <li class="list-group-item d-flex justify-content-between align-items-center">
+                                <div class="file-info">
+                                    <img src="/static/images/icons/world-wide-web.png" class="file-icon" alt="LaTeX Icon">
+                                    <span>EasyChair (WEB)</span>
+                                </div>
+                                <a href="https://www.easychair.org/my/conference?conf=ictiair2025"
+                                   class="btn btn-primary btn-lg" target="_blank">
+                                    <i class="fa fa-download"></i> Download
+                                </a>
+                        </li>
                         </ul>
                     </div>
                 </div>
